# shoutter

./: .editorconfig  Cargo.toml  LICENSE  rust-toolchain.toml  rustfmt.toml
.github/workflows/: clippy.yaml  formatting.yaml  test.yaml
crates/diff_confused_model/: Cargo.toml
crates/diff_confused_web/: .gitignore  Cargo.toml  README.md
crates/diff_confused_web/minifier/: .prettierrc.js  package.json  tsconfig.json
crates/diff_confused_web/src/: main.rs
crates/diff_confused_web/src/pages/: home.rs  mod.rs
crates/shoutter_api_interface/: Cargo.toml  build.rs  diff_confused.proto
crates/shoutter_api_interface/src/: lib.rs  protobuf.rs
crates/shoutter_model/: Cargo.toml
crates/shoutter_model/src/: id.rs  lib.rs  shout.rs  user.rs  validation.rs
crates/shoutter_web/: Cargo.toml  Justfile  README.md  index.html
crates/shoutter_web/minifier/: Cargo.toml  Justfile  main.ts  package.json  pnpm-lock.yaml
crates/shoutter_web/minifier/macro/: Cargo.toml
crates/shoutter_web/minifier/macro/src/: lib.rs  struct_map.rs
crates/shoutter_web/minifier/src/: func.rs  lib.rs  opt_js.rs  symbol.rs
crates/shoutter_web/minifier/src/js/: brotli.rs  fs.rs  minifier.rs
crates/shoutter_web/minifier/src/sys/: fs.rs  minifier.rs  mod.rs
crates/shoutter_web/src/: main.rs
crates/shoutter_web/src/hooks/: api_client.rs
crates/shoutter_web/src/pages/: home.rs  login.rs
crates/shoutter_webserver/: Cargo.toml  README.md
crates/shoutter_webserver/src/: cors.rs  extractor.rs  main.rs
crates/shoutter_webserver/src/endpoints/: greeting.rs  mod.rs
