[package]
name = "diff_confused_web"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.12", features = ["yew_integration"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
