[package]
name = "shoutter_model"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
uuid = { version = "1.3", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
