[package]
name = "shoutter_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", optional = true }

[features]
test-requester = ["reqwest"]
