[package]
name = "minifier-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"
minifier-rs-macro = { path = "./macro" }
once_cell = "1.17.1"
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-web = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-encoder = "0.29.0"
wasmparser = "0.107.0"
web-sys = { version = "0.3", features = ["console"] }
